# Amcrest-API

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-and-publish.yaml  test.yaml
amcrest_api/: __init__.py  __main__.py  camera.py  config.py  const.py  data.py  event.py  imaging.py  ptz.py  utils.py
tests/: conftest.py  test_camera.py  test_events.py  test_utils.py
tests/__snapshots__/: test_camera.ambr
tests/fixtures/mock_event_multipart_responses/: audio_mutation_stop.txt
tests/fixtures/mock_responses/: get_audiodetect.json  serial_number.json
tests/fixtures/mock_responses_alt/: ptz_capabilities_ip4m_1051.json
