[project]
authors = [
  {name="Benjamin Pearce", email="amcrest_api@bcpearce.com"}
]
description = "Python Wrapper for Amcrest API v3.26 or greater."
license = "MIT"
name = "amcrest_api"
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.8"

[tool.poetry]
packages = [{include = "amcrest_api"}]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
httpx = "^0.27.2"
python = "^3.11"
yarl = "^1.18.3"
pytest-httpserver = "^1.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
syrupy = "^4.8.0"
pytest-asyncio = "^0.25.2"
pytest-cov = "^6.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
pre-commit = "^4.0.1"
ruff = "^0.8.4"

[tool.poetry.group.cli.dependencies]
typer = "^0.15.1"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "UP",
  "B",
  "SIM",
  "I",
  "TC",
]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=amcrest_api --cov-report=xml --junitxml test_results.xml"

[tool.coverage.run]
omit = ["amcrest_api/__main__.py"]
